[package]
name = "tmq"
version = "0.1.0"
authors = ["cetra3 <cetra3@hotmail.com>"]
license = "MIT/Apache-2.0"
description = "ZeroMQ bindings for Tokio"
repository = "https://github.com/cetra3/tmq"
readme = "README.md"

[dependencies]
futures = "0.1"
mio = "0.6"
tokio = "0.1"
tokio-io = "0.1"
failure = "0.1"
log = "0.4"

[dependencies.zmq]
git = "https://github.com/oblique/rust-zmq"
branch = "build-zmq"
features = ["static-libzmq"]

[dev-dependencies]
pretty_env_logger = "0.2"
